Correção no 'enter' da regra + Correção ao salvar no SharedPreferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MaquinaDeTuring</string>
+
+    <string name="edittext_hint"><font size="12">currentState, currentSymbol, newSymbol, direction, newState</font></string>
 </resources>
